<?xml version="1.0"?>
<package format="3">
  <name>techx_r2_chassis_control</name>
  <version>0.1.0</version>
  <description>Python serial bridge for R2 chassis STM32.</description>
  <maintainer email="todo@example.com">techx</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>techx_r2_chassis_interfaces</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
