<?xml version="1.0"?>
<package format="3">
  <name>techx_r2_chassis_interfaces</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces for R2 chassis STM32 serial control.</description>
  <maintainer email="todo@example.com">techx</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
